--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/core": "^1.6.7",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
